# synth-gen

./: .cursorrules  .gitignore  .pre-commit-config.yaml  README.md  app.py  main.py  plan.md  pyproject.toml
config/: README.md  schema.yaml
docs/: FASTER_DATA_ACCESS.md
eda/anomaly_stats/results/: iqr_stats.parquet
examples/: run_forest_flow_demo.py
forest_flow/: __init__.py  model.py  preprocessing.py
scripts/: anomaly_detection.py  combine_mimic_data.py  combine_nhanes_data.py  convert_csv_to_parquet.py  correlation_stats.py  download_nhanes_all_2017_2020.py  preprocess_data.py  unzip_mimic.py
