[project]
name = "synth-gen"
version = "0.1.0"
description = "Healthcare dataset curation for ML model training"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "joblib>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "urllib3>=2.0.0",
]
